.happypack/s--230299534
SyntaxError: super() is only allowed in a derived constructor

[0m [90m  8 | [39m
 [90m  9 | [39m  constructor(options) {
[31m[1m>[22m[39m[90m 10 | [39m    [36msuper[39m()[33m;[39m
 [90m    | [39m    [31m[1m^[22m[39m
 [90m 11 | [39m    [36mthis[39m[33m.[39minit()[33m;[39m
 [90m 12 | [39m
 [90m 13 | [39m  }[0m

BabelLoaderError: SyntaxError: super() is only allowed in a derived constructor

[0m [90m  8 | [39m
 [90m  9 | [39m  constructor(options) {
[31m[1m>[22m[39m[90m 10 | [39m    [36msuper[39m()[33m;[39m
 [90m    | [39m    [31m[1m^[22m[39m
 [90m 11 | [39m    [36mthis[39m[33m.[39minit()[33m;[39m
 [90m 12 | [39m
 [90m 13 | [39m  }[0m

    at transpile (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:268:5)
    at /Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyWorker.js:32:3)